# inky-dsp

./: .dockerignore  .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  requirements.txt
.github/workflows/: python-release.yml
docker/api/: Dockerfile
docker/core/: Dockerfile
dockerbuild/api/: Dockerfile
dockerbuild/core/: Dockerfile
inky_dsp/api/: app.py
inky_dsp/api/routers/: display_image.py
inky_dsp/pipelines/: __init__.py  display_image.py
inky_dsp/utils/: image.py
inkywhat_dsp/api/: app.py
inkywhat_dsp/api/image/: gnerate_image.py  set_image.py
inkywhat_dsp/audio/: recorder.py
inkywhat_dsp/data/dalle/: image-generation.yaml
inkywhat_dsp/image_generation/: __init__.py  dalle_generator.py
inkywhat_dsp/meta/: __init__.py
inkywhat_dsp/meta/api/image/: generate_image.py  set_image.py
inkywhat_dsp/utils/: image.py  json_data.py  yaml_data.py
notebooks/01-disaplay/: 01-display-inky-whay.ipynb  01-display.ipynb  02-display-inky-Impression.ipynb
notebooks/01-test/: 01-test.ipynb
notebooks/02-test-api/: 01-set-image.ipynb
notebooks/03-dalle-3-generation/: 01-dalle-3-generation.ipynb
notebooks/04-audio-recording/: 01-audio-recording.ipynb
src/inky_dsp/buttons/: __init__.py  buttons.py
src/inky_dsp/pipelines/: display_image.py
src/inky_dsp/utils/: image.py
src/inkywhat_dsp/: requirements.txt  setup.py
src/inkywhat_dsp/inkywhat_dsp/api/: app.py
src/inkywhat_dsp/inkywhat_dsp/display/: display.py
(+5 files in other folders)
